--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/kv": "^2.0.0",
     "axios": "^1.7.3",
     "next": "14.2.5",
     "react": "^18",
