--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:db:push": "dotenv -e .env.development.local prisma db push",
+    "prisma:seed": "dotenv -e .env.development.local node prisma/seed.mjs"
   },
   "dependencies": {
-    "@vercel/kv": "^2.0.0",
+    "@prisma/client": "^5.18.0",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.3",
     "next": "14.2.5",
@@ -22,9 +25,11 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.10",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.41",
+    "prisma": "^5.18.0",
     "tailwindcss": "^3.4.9",
     "typescript": "^5"
   }
