--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "prisma:seed": "dotenv -e .env.development.local node prisma/seed.mjs"
   },
   "dependencies": {
-    "@prisma/client": "^5.18.0",
+    "@auth/prisma-adapter": "^2.4.2",
+    "@prisma/client": "^5.19.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.3",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -30,7 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.41",
-    "prisma": "^5.18.0",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.9",
     "typescript": "^5"
   }
