--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.3",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18"
