--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:db:push": "dotenv -e .env.development.local prisma db push",
-    "prisma:seed": "dotenv -e .env.development.local node prisma/seed.mjs"
+    "prisma:db:push": "dotenv -e .env.local prisma db push",
+    "prisma:seed": "dotenv -e .env.local node prisma/seed.mjs"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
