--- a/package.json
+++ b/package.json
@@ -13,27 +13,34 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
-    "@prisma/client": "^5.19.1",
+    "@mantine/charts": "^7.13.3",
+    "@mantine/core": "^7.13.3",
+    "@mantine/hooks": "^7.13.3",
+    "@mantine/notifications": "^7.13.3",
+    "@prisma/client": "^5.21.1",
     "@sentry/nextjs": "^8.32.0",
+    "@tabler/icons-react": "^3.19.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.3",
     "next": "^14.2.14",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.10",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.41",
-    "prisma": "^5.20.0",
+    "postcss": "^8.4.47",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.6.3"
   }
