--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest --passWithNoTests",
     "prisma:db:push": "dotenv -e .env.local prisma db push",
-    "prisma:seed": "dotenv -e .env.local node prisma/seed.mjs"
+    "prisma:seed": "dotenv -e .env.local node prisma/seed.mjs",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "jest --bail --findRelatedTests"
+    ]
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
@@ -30,6 +38,9 @@
     "recharts": "^2.13.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -37,11 +48,17 @@
     "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "husky": "^9.1.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.10",
     "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prisma": "^5.21.1",
+    "supertest": "^7.0.0",
     "tailwindcss": "^3.4.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
