--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest --passWithNoTests",
     "prisma:db:push": "dotenv -e .env.local prisma db push",
     "prisma:seed": "dotenv -e .env.local node prisma/seed.mjs",
+    "revalidate": "dotenv -e .env.local node scripts/revalidate.mjs",
     "prepare": "husky"
   },
   "lint-staged": {
