--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tabler/icons-react": "^3.21.0",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.1.0",
+    "crypto-js": "4.1.1",
     "next": "^14.2.17",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
