--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "@mantine/core": "^7.13.3",
     "@mantine/hooks": "^7.13.3",
     "@mantine/notifications": "^7.13.3",
+    "@next/third-parties": "^14.2.18",
     "@prisma/client": "^5.22.0",
     "@sentry/nextjs": "^8.32.0",
     "@tabler/icons-react": "^3.21.0",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.1.0",
     "crypto-js": "4.1.1",
-    "next": "^14.2.17",
+    "next": "^14.2.18",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
