--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragon-city-helper",
-  "version": "0.1.0",
+  "version": "1.1.2",
   "private": true,
   "scripts": {
     "postinstall": "prisma generate",
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "test": "jest --passWithNoTests",
     "prisma:db:push": "dotenv -e .env.local prisma db push",
-    "prisma:seed:master": "dotenv -e .env.local node prisma/seed-master.mjs",
+    "prisma:seed": "dotenv -e .env.local node prisma/seed.mjs",
     "revalidate": "dotenv -e .env.local node scripts/revalidate.mjs",
     "prepare": "husky"
   },
@@ -22,22 +22,16 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.3",
-    "@mantine/charts": "^7.13.3",
     "@mantine/core": "^7.13.3",
     "@mantine/hooks": "^7.13.3",
-    "@mantine/notifications": "^7.13.3",
     "@next/third-parties": "^14.2.18",
     "@prisma/client": "^5.22.0",
     "@sentry/nextjs": "^8.32.0",
     "@tabler/icons-react": "^3.21.0",
-    "@vercel/analytics": "^1.3.2",
-    "@vercel/speed-insights": "^1.1.0",
-    "crypto-js": "4.1.1",
     "next": "^14.2.18",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
-    "react-dom": "^18",
-    "recharts": "^2.13.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
