--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prisma:db:push": "dotenv -e .env.local prisma db push",
     "prisma:seed": "dotenv -e .env.local node prisma/seed.mjs",
     "revalidate": "dotenv -e .env.local node scripts/revalidate.mjs",
+    "pull:master:data": "dotenv -e .env.local node scripts/pullMaster.mjs",
+    "changeset": "changeset",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -34,12 +36,14 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vercel/blob": "^0.26.0",
     "autoprefixer": "^10.4.20",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8",
