--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.3",
-    "@mantine/core": "^7.13.3",
-    "@mantine/hooks": "^7.13.3",
+    "@mantine/core": "^7.14.3",
+    "@mantine/form": "^7.14.3",
+    "@mantine/hooks": "^7.14.3",
     "@next/third-parties": "^14.2.18",
     "@prisma/client": "^6.2.1",
     "@sentry/nextjs": "^8.32.0",
@@ -33,7 +34,8 @@
     "next": "^14.2.18",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.13.1"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.10",
