--- a/package.json
+++ b/package.json
@@ -24,16 +24,18 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.3",
-    "@mantine/core": "^7.13.3",
-    "@mantine/hooks": "^7.13.3",
+    "@mantine/core": "^7.14.3",
+    "@mantine/form": "^7.14.3",
+    "@mantine/hooks": "^7.14.3",
     "@next/third-parties": "^14.2.18",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.0.0",
     "@sentry/nextjs": "^8.32.0",
     "@tabler/icons-react": "^3.21.0",
     "next": "^14.2.18",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.13.1"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.10",
@@ -55,7 +57,7 @@
     "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "prisma": "^5.22.0",
+    "prisma": "^6.0.0",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.9",
     "ts-node": "^10.9.2",
