--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@mantine/core": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
+    "@mantine/notifications": "^7.17.1",
     "@next/third-parties": "^14.2.18",
     "@prisma/client": "^6.3.1",
     "@sentry/nextjs": "^9.1.0",
