:sparkles: Compute Element Strengths and weaknesses

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prisma:db:push": "dotenv -e .env.local prisma db push",
     "prisma:seed": "dotenv -e .env.local node prisma/seed.mjs",
     "prisma:seed:other": "dotenv -e .env.local node prisma/seed-ditlep-dc.mjs",
+    "prisma:update:types": "dotenv -e .env.local node prisma/updateTypes.mjs",
     "revalidate": "dotenv -e .env.local node scripts/revalidate.mjs",
     "pull:master:data": "dotenv -e .env.local node scripts/pullMaster.mjs",
     "changeset": "changeset",
