--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@mantine/core": "^7.16.3",
+    "@mantine/form": "^7.17.7",
     "@mantine/hooks": "^7.16.3",
     "@mantine/notifications": "^7.17.1",
     "@next/third-parties": "^14.2.18",
