--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "@mantine/hooks": "^7.16.3",
     "@mantine/notifications": "^7.17.1",
     "@next/third-parties": "^14.2.18",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.8.2",
     "@sentry/nextjs": "^9.1.0",
     "@tabler/icons-react": "^3.30.0",
+    "date-fns": "^4.1.0",
     "next": "^14.2.18",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18",
@@ -41,28 +42,19 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.12",
-    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@vercel/blob": "^0.27.1",
-    "autoprefixer": "^10.4.20",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.10",
-    "postcss": "^8.4.47",
     "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
-    "prisma": "^6.6.0",
-    "supertest": "^7.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prisma": "^6.8.2",
     "tailwindcss": "^3.4.9",
-    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
 }
